add in more regions

--- a/templates/jump.html
+++ b/templates/jump.html
@@ -5,9 +5,11 @@
   <input type="text" placeholder="id or slug">
   <p>Hidden apps on the production marketplace.</p>
   <ul>
-    <li><a href="#" class="jump" data-slug="dev">Dev</a></li>
+    <li><a href="#" class="jump" data-slug="mkt-dev">Dev</a></li>
     <li><a href="#" class="jump" data-slug="marketplace-payments-alt">Payments alt</a></li>
-    <li><a href="#" class="jump" data-slug="marketplace-6">Stage</a></li>
+    <li><a href="#" class="jump" data-slug="mkt-stage">Stage</a></li>
+    <li><a href="#" class="jump" data-slug="marketplace">Prod</a></li>
+    <li><a href="#" class="jump" data-slug="marketplace-package">Tarako</a></li>
   </ul>
 </form>
 
