--- a/templates/waffles.html
+++ b/templates/waffles.html
@@ -9,6 +9,7 @@
           <thead>
               <tr>
                   <th><marquee behavior="alternate" scrolldelay="500">♬ Everyday I'm wafflin' ♬</marquee></th>
+                  <th class="angle"><a href="http://mp.dev/admin/models/waffle/">local</th>
                   <th class="angle"><a href="https://marketplace-altdev.allizom.org/admin/models/waffle/">altdev</th>
                   <th class="angle"><a href="https://marketplace-dev.allizom.org/admin/models/waffle/">dev</a></th>
                   <th class="angle"><a href="https://marketplace.allizom.org/admin/models/waffle/">stage</a></th>
