add in raw file

--- a/templates/jump.html
+++ b/templates/jump.html
@@ -11,6 +11,10 @@
     <li><a href="#" class="jump" data-slug="marketplace">Prod</a></li>
     <li><a href="#" class="jump" data-slug="marketplace-package">Tarako</a></li>
   </ul>
+  <p>Other web activities.</p>
+  <ul>
+    <li><a href="#" class="usage">Usage</a></li>
+  </ul>
 </form>
 
 {% endblock %}
